--- a/frontend/src/component/admin/productList.css
+++ b/frontend/src/component/admin/productList.css
@@ -17,11 +17,25 @@
     margin: 2rem;
     text-align: center;
   }
-  
-  .productListTable {
-    background-color: white;
-    border: none !important;
+  .myOrdersPage {
+    width: 100%;
+    max-width: 100%;
+    padding: 0 7vmax;
+    box-sizing: border-box;
+    background-color: rgb(235, 235, 235);
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
   }
+
+  .myOrdersTable {
+    background-color: white;
+    
+  }
+  
   
   .productListTable div {
     font: 300 1vmax "Roboto";
