--- a/frontend/src/component/product/ProductDetails.css
+++ b/frontend/src/component/product/ProductDetails.css
@@ -1,7 +1,7 @@
 .ProductDetails {
     background-color: rgb(255, 255, 255);
-    width: 100vw;
-    max-width: 100%;
+    width: 100%;
+    
     padding-left: 16vmax;
     padding-right: 16vmax;
     box-sizing: border-box;
@@ -38,9 +38,6 @@
     align-items: flex-start;
   }
   
-  .CarouselImage {
-    width: 10vmax;
-  }
   
   .detailsBlock-1 > h2 {
     color: rgb(54, 54, 54);
@@ -212,16 +209,45 @@
     text-align: center;
     color: rgba(0, 0, 0, 0.548);
   }
-  
-  @media screen and (max-width: 600px) {
+
+
+  @media screen and (max-width: 920px) {
+
+    .ProductDetails{
+      width: 100vw;
+      padding: 0;
+    }
+    
+  }
+
+
+  @media screen and (max-width: 820px) {
+
+    .ProductDetails{
+      width: 90vw;
+      padding: 0;
+    }
+   
+  }
+
+
+  @media screen and (max-width: 450px) {
     .ProductDetails {
       flex-direction: column;
       height: unset;
+
+      width: 100%;
     }
 
     .rBox{
-      width: 60vmax !important;
+      width: 100%;
+      height: 100%;
+      padding: 7px;
+      
+      
     }
+
+    
   
     .ProductDetails > div:last-child {
       align-items: center;
@@ -302,3 +328,12 @@
       font: 300 5vw cursive;
     }
   }
+
+
+
+
+  
+
+ 
+  
+  
