--- a/frontend/src/navbar/navbar.css
+++ b/frontend/src/navbar/navbar.css
@@ -26,11 +26,12 @@ li {
 
 .main-nav {
   width: 100%;
-  height: 10rem;
+  height: 8.5rem;
   display: grid;
   grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.2) 0px 30px 60px -30px;
+    border-bottom: 1px solid tomato !important;
 }
 
 .logo {
@@ -154,6 +155,10 @@ li {
 .noo{
   display: none;
   color: tomato;
+}
+
+.close{
+  color:black !important;
 }
 
 /* responsive css style  */
