--- a/frontend/src/component/admin/productList.css
+++ b/frontend/src/component/admin/productList.css
@@ -60,9 +60,72 @@
   .MuiDataGrid-columnHeader div {
     color: rgb(255, 255, 255);
   }
+
+  #myOrdersHeading {
+    text-align: center;
+    font: 400 1.2vmax "Roboto";
+    padding: 0.5vmax;
+    box-sizing: border-box;
+    color: rgb(255, 255, 255);
+    transition: all 0.5s;
+    background-color: rgb(44, 44, 44);
+  }
+  
+  
+  
+  @media screen and (max-width: 950px) {
+
+    .myOrdersTable div {
+      font: 300 2vmax "Roboto";
+    }
+  }
   
   @media screen and (max-width: 600px) {
-    .productListTable div {
-      font: 300 4vw "Roboto";
+    .myOrdersPage {
+     
+      padding: 0;
+      height: 93vh;
+    }
+
+   
+    
+  
+    #myOrdersHeading {
+      font: 400 2vmax "Roboto";
+      padding: 4vw;
+    }
+  
+    .myOrdersTable div {
+      font: 300 2vw "Roboto";
+    }
+  
+    .MuiDataGrid-columnHeader {
+      padding: 5px !important;
+    }
+  
+    .MuiDataGrid-columnHeader div {
+      font: 500 2vw "Roboto" !important;
+    }
+  }
+
+
+  @media screen and (max-width: 600px) {
+    .myOrdersPage {
+      padding: 0;
+      height: 93vh;
+    }
+  
+    
+  
+    .myOrdersTable div {
+      font: 300 2.5vw "Roboto";
+    }
+  
+    .MuiDataGrid-columnHeader {
+      padding: 10px !important;
+    }
+  
+    .MuiDataGrid-columnHeader div {
+      font: 500 2.5vw "Roboto" !important;
     }
   }
