--- a/frontend/src/component/admin/productRevies.css
+++ b/frontend/src/component/admin/productRevies.css
@@ -48,13 +48,17 @@
   }
   
   @media screen and (max-width: 600px) {
+    .productReviewsForm{
+      width:39rem;
+    }
     .productReviewsContainer {
+     
       border-left: none;
       border-top: 1px solid rgba(0, 0, 0, 0.158);
     }
     .productReviewsForm > div > input {
       padding: 2.5vmax 5vmax;
-      font: 300 1.7vmax cursive;
+      font: 300 3vmax cursive;
     }
   
     .productReviewsForm > div > svg {
