--- a/frontend/src/component/orders/myOrders.css
+++ b/frontend/src/component/orders/myOrders.css
@@ -25,7 +25,7 @@
   .myOrdersTable {
     background-color: white;
     width: 100%;
-    padding: 0;
+    padding: 2vmax;
   }
   
   .myOrdersTable div {
